--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -7,20 +7,38 @@ p{
 }
 
 body{
-	background-color: rgba(178,232,122,0.5);
+	background-color: rgba(210,180,140,0.5);
 	/*background-image: url("b84.png");*/
 	/*background-color: hsla(150,81%,93%,0.5);*/
 }
 /* Coloca uma borda em volta da área foto-legenda*/
 figure.foto-legenda{
-	border: 8px solid red;
-	box-shadow: 5px 5px 4px black;
+	border: 5px solid red;
+	box-shadow: 1px 1px 1px black;
+	position: relative;
 }		
 		
 /*Entrou na tag figure da classe foto legenda e a img serve para fazer com que a borda
 fique em volta da img*/
 figure.foto-legenda img{
 	border: 3px solid green;
-	width: 50%;
-	height: 50%;
+	width: 100%;
+	height: 90%;
+}
+/*width - largura / height - altura / padding - preenchimento/ opacity - transparência/ transition - transição*/
+
+figure.foto-legenda figcaption{
+ 	position: absolute;
+ 	top: 0px;
+ 	background-color: rgba(0,0,0,0.4);
+ 	color: white;
+ 	width: 100%;
+ 	height: 100%;
+ 	padding: 10px;
+ 	opacity: 0;
+ 	transition: 2s;
+
+}
+figure.foto-legenda:hover figcaption{
+	opacity: 1;		
 }
