--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+
+@font-face{/*Desvantagem - colocar a fonte de seus arquivos no site.*/
+	font-family: 'FonteLogo';
+	src: url("../_fonts/bubblegum-sans-regular.otf");
+}
+
 /*aqui coloca o estilo em todas as tags P*/
 p{
 	text-align: justify;
@@ -14,7 +21,7 @@ body{
 }
 
 div#interface{
-	width: 900px;
+	width: 1000px;
 	background-color: #ffffff;
 	margin: -20px auto 0px auto;/*auto - serve para calcular automaticamente as distancias que restam da div para o body*/
 	box-shadow: 0px 0px 15px rgba(0,0,0,1.5);
@@ -24,6 +31,7 @@ div#interface{
 /*se quiser ser mais expecifico pode usar div#interface img#icone */ 
 img#icone{
 	position: absolute;
+	top: 75px;
 	left: 900;
 
 }
@@ -95,4 +103,50 @@ nav#menu a{
 }
 nav#menu a:hover{
 	color: #ffffff;
+}
+
+header#cabecalho{ 
+	/*border-bottom colocar uma borda em baixo do cabecalho.*/
+	border-bottom: 1px #606060 solid;
+	height: 170px; 
+	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 120px /*deslocamento do eixo x,y do background 
+																		e o 0 começa no canto superior esquerdo*/;
+}
+
+header#cabecalho h1{
+	/*Editar as letras do h1*/
+	font-family: FonteLogo, sans-serif;
+	font-size: 30pt;
+	color: #606060;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+	margin-top: 40px;
+	margin-bottom: 10px;
+}
+
+header#cabecalho h2{
+	font-family: Titillium Web, sans-serif;
+	font-size: 15pt;
+	color: #888888;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+section#corpo{
+	display: block;
+	width: 600px;
+	float: left;
+	border-right: 1px solid #606060;
+	padding-right: 15px; 
+}
+
+aside#lateral{
+	display: block;
+	width: 370px;
+	float: right;
+}
+
+footer#rodape{
+	clear: both;
+	border-top: 1px solid #606060;
+	text-align: center;
 }
