--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -17,6 +17,7 @@ body{
 	/*background-color: rgba(255,255,255,0.5);
 	background-image: url("b84.png");
 	background-color: hsla(150,81%,93%,0.5);*/
+	font-family: Arial, sans-serif;
 	background-color: #dddddd;
 }
 
@@ -133,7 +134,7 @@ header#cabecalho h2{
 
 section#corpo{
 	display: block;
-	width: 600px;
+	width: 590px;
 	float: left;
 	border-right: 1px solid #606060;
 	padding-right: 15px; 
@@ -143,10 +144,105 @@ aside#lateral{
 	display: block;
 	width: 370px;
 	float: right;
+	padding: 10px;
+	margin-top: 10px;
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+	background-color: #dddddd;
+}
+
+aside#lateral h1{
+	font-family: 'FonteLogo' , sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-top: 0px;
+}
+
+aside#lateral h2{
+	background-color: #606060;
+	font-size: 12pt;
+	color: #ffffff;
+	padding: 5px;
 }
 
 footer#rodape{
 	clear: both;
 	border-top: 1px solid #606060;
 	text-align: center;
+}
+
+/*Contorna a borda da tabela / border-spacing tirar o espaço das bordas*/
+table#tabelaSpec{
+	border: 1px solid #606060;
+	border-spacing: 0px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/*Contorna a borda tabela TD/ aumentar espaçamento do conteúdo - padding.*/
+table#tabelaSpec td{
+	border: 1px solid #606060;
+	padding: 10px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+table#tabelaSpec td.ce{
+	color: #ffffff;
+	background-color: #606060;
+	text-align: right;
+	vertical-align: top;
+	font-weight: bold;
+}
+
+table#tabelaSpec td.cd{
+	background-color: #cecece;
+	text-align: left;
+	vertical-align: middle; /*o mesmo do css do pai TD*/
+}
+
+table#tabelaSpec caption{
+	color: #888888;
+	font-size: 15pt;
+	font-weight: bolder;
+}
+/*Mexeu com o titulo da tabela.Deixando o Mar/2013 mais separado.*/
+table#tabelaSpec caption span{
+	display: block;
+	float: right;
+	color: #000000;
+	font-size: 10pt;
+	margin-top: 10px;
+}
+
+article#noticia-principal h2{
+	font-size: 12pt;
+	color: #606060;
+	background-color: #dddddd;
+	padding: 5px 0px 5px 10px;
+	margin: 10px 0px 10px 0px;
+}
+
+header#cabecalho-artigo h1{
+	font-family: 'FonteLogo' sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-bottom: 0px;
+	margin-top: 0px;
+}
+
+header#cabecalho-artigo h2{
+	font-size: 13pt;
+	color: #cecece;
+	background-color: #ffffff;
+	margin: 0px;
+}
+
+header#cabecalho-artigo h3{
+	font-size: 12pt;
+	color: #606060;
+}
+
+header#cabecalho-artigo h3.direita{
+	font-size: 10pt;
+	text-align: right;
 }
